tests/NormalTests/paczka1/small_fuzzy/18058871.err
Error in line 1: AJJ S737 70,0
Error in line 2: AJJ S25 82,3
Error in line 9: 85yYrAccrb S737 -1,6
Error in line 11: aZyTm S442 86,4
